--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -98,7 +98,7 @@
 
     #nav .subnav {
         position: initial;
-        background: #333;
+        background: skyblue;
     }
 
     #nav .subnav li {
@@ -106,7 +106,7 @@
     }
 
     #nav .subnav a {
-        color: #fff;
+        color: #000;
         padding: 5px 41px;
     }
 
